# Palladium

./: .gitignore  Cargo.toml  LICENSE
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
