[workspace]
resolver = "3"
members = ["core", "cli", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kaelem Deng", "Shawn Prather", "Marina Feller"]
license = "GPL-3.0-or-later"
rust-version = "1.70"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"