[package]
name = "palladium-shared"
description = "Shared types and utilities for Palladium"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true